.kubernetes/aws/992382474575/ing.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ing-go-order
  namespace: test-a
  annotations:
    nginx.ingress.kubernetes.io/backend-protocol: "HTTP"
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/default-backend: "svc-go-order"
    nginx.ingress.kubernetes.io/proxy-body-size: 10m
spec:
  ingressClassName: nginx
  rules:
    - host: go-order.architecture.caradhras.io
      http:
        paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: svc-go-order
              port:
                number: 5010
